--- a/webapp/WEB-INF/web.xml
+++ b/webapp/WEB-INF/web.xml
@@ -25,11 +25,15 @@
         <servlet-class>ru.academits.servlet.DeleteContactsServlet</servlet-class>
     </servlet>
 
+    <servlet>
+        <servlet-name>FilterContactServlet</servlet-name>
+        <servlet-class>ru.academits.servlet.FilterContactServlet</servlet-class>
+    </servlet>
+
     <servlet-mapping>
         <servlet-name>getAllContactsServlet</servlet-name>
         <url-pattern>/phonebook/get/all</url-pattern>
     </servlet-mapping>
-
     <servlet-mapping>
         <servlet-name>AddContactsServlet</servlet-name>
         <url-pattern>/phonebook/add</url-pattern>
@@ -41,5 +45,9 @@
     <servlet-mapping>
         <servlet-name>DeleteContactsServlet</servlet-name>
         <url-pattern>/phonebook/deleteContacts</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>FilterContactServlet</servlet-name>
+        <url-pattern>/phonebook/filter</url-pattern>
     </servlet-mapping>
 </web-app>
